# compal_intern_assignment3

./: .gitignore  README.md  api.Dockerfile  api.Dockerfile.dockerignore  docker-compose.yaml  ls.Dockerfile  ls.Dockerfile.dockerignore  ngx.Dockerfile  ws.Dockerfile  ws.Dockerfile.dockerignore
backend/: pyproject.toml
backend/src/assignment3/: __init__.py  main.py
backend/src/broadcast/: __init__.py  broadcast.py
backend/src/database/: database.py  database_accessor.py
backend/src/listener/: __init__.py  create_listener.py  delete_listener.py  load_listener.py  update_listener.py
backend/src/producer/: producer.py
backend/src/resources/: connections.py  listener.py  mq_keys.py  producer.py  todo_model.py
init-db/: 01-init.sql
k8s-manifests/: app-1-deployment.yaml  app-1-service.yaml  app-2-deployment.yaml  app-2-service.yaml  cl-server-deployment.yaml  cl-server-service.yaml  dl-server-deployment.yaml  dl-server-service.yaml  env-client-init-env-configmap.yaml  env-pgdb-init-env-configmap.yaml  ll-server-deployment.yaml  ll-server-service.yaml  nginx-proxy-cm0-configmap.yaml  nginx-proxy-cm1-configmap.yaml  nginx-proxy-deployment.yaml  nginx-proxy-service.yaml  postgres-db-cm1-configmap.yaml  postgres-db-deployment.yaml  postgres-db-service.yaml  rabbitmq-deployment.yaml  rabbitmq-service.yaml  redis-cache-deployment.yaml  redis-cache-service.yaml  ul-server-deployment.yaml  ul-server-service.yaml  websocket-server-deployment.yaml  websocket-server-service.yaml
nginx/: nginx.conf
temp-k8s/: app-1-deployment.yaml  app-1-service.yaml  app-2-deployment.yaml  app-2-service.yaml  nginx-proxy-deployment.yaml  (+10 more)
(+3 files in other folders)
