[project]
name = "assignment3"
version = "0.0.0"
description = "Still Pounding Sand"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.6.2",
    "fastapi>=0.138.1",
    "psycopg[binary,pool]>=3.3.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]

[project.scripts]
assignment3 = "src.assignment3.main:main"
create_listener = "src.listener.create_listener:main"
load_listener = "src.listener.load_listener:main"
update_listener = "src.listener.update_listener:main"
delete_listener = "src.listener.delete_listener:main"
websocket_broadcaster = "src.broadcast.broadcast:main"

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv_build]
source-dir = "."
packages = ["src"]