[project]
name = "assignment3"
version = "0.0.0"
description = "Still Pounding Sand"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.6.2",
    "fastapi>=0.138.1",
    "psycopg[binary,pool]>=3.3.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]

[project.scripts]
assignment3 = "assignment3.main:main"
update_listener = "listener.update_listener:main"
create_listener = "listener.delete_listener:main"
load_listener = "listener.load_listener:main"
delete_listener = "listener.delete_listener:main"

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"